# punge_beta

./: MAINPLAYLIST.sqlite  README.md  db.py  punge integration.py  punge_env_var.ps1  punge_main.py  update_entries.py
Cache/: downloadlocation.json  playlist.json
resources/: youtube_thumbnail_dependancies.py  youtube_thumbnail_dependancies.py.bak
rust/: Cargo.toml  pyproject.toml
rust/src/: db_change.rs  lib.rs
