[package]
name = "punge_backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "punge_backend"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.16.6", features = ["extension-module"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
walkdir = "2.3.2"
